"""
Graphql Schemadefinitie voor het Bemiddelingregister
Versie 0.0.1
Gebaseerd op ERD versie 20230322
"""
scalar UUID
scalar Date
scalar DateTime

schema {
  query: Query
}

"de volgende bevragingen zijn er gedefinieerd"
type Query {
  # Haal alle bemiddelingen voor bsn
  getWlzBemiddelingenVoorBsn(bsn: String!): Client!
  # Haal WlzBemiddeling op voor BemiddelingID
  getWlzBemiddelingVoorBemiddelingID(bemiddelingID: UUID!): WlzBemiddeling!
  # Haal Contacten op voor bsn
  getContactVoorBsn(bsn: String!): [Contact!]
  # Haal Bemiddeling op voor BemiddeldeInstellingID
  getBemiddelingVoorBemiddedeInstelling(bemiddeldeInstellingID:UUID!): BemiddeldeInstelling!
}

"Objects"
type Client {
  clientID: UUID! #
  bsn: String!
  # partnerOpname: String! #COD260: Ja of nee - https://github.com/iStandaarden/iWlz-codelijsten-APiWlz/tree/main/codelijsten/COD260
  leefeenheid: String #COD478: Leefeenheid - https://github.com/iStandaarden/iWlz-codelijsten-APiWlz/blob/main/codelijsten/COD478
  huisarts: String
  communicatievorm: String #COD747: Communicatievorm - https://github.com/iStandaarden/iWlz-codelijsten-APiWlz/blob/main/codelijsten/COD747
  taal: String
  bemiddeling: [Bemiddeling!]!
  dossierhouder: [Dossierhouder]
  coordinatorZorgThuis: [CoordinatorZorgThuis]
  overdracht: [Overdracht]
  contact: [Contact]
  telefoon: [Telefoon]
  email: [Email]
  adres: [Adres]
}

type Bemiddeling {
  bemiddelingID: UUID!
  # besluitnummer: Int!
  wlzIndicatieID: UUID!
  verantwoordelijkZorgkantoor: String! #COD001: Zorgkantoor - https://github.com/iStandaarden/iWlz-codelijsten-APiWlz/blob/main/codelijsten/COD001
  bemiddeldeInstelling: [BemiddeldeInstelling]
  pgb: [Pgb]
  client: Client!
}

type BemiddeldeInstelling {
  bemiddeldeInstellingID: UUID!
  instelling: String!
  uitvoerendZorgkantoor: String! #COD001: Zorgkantoor - https://github.com/iStandaarden/iWlz-codelijsten-APiWlz/blob/main/codelijsten/COD001
  zorgInNatura: [ZorgInNatura!]!
  bemiddeling: Bemiddeling!
}

interface ZorgToewijzing {
  zzpCode: String! #COD163: Zorgzwaartepakket - https://github.com/iStandaarden/iWlz-codelijsten-APiWlz/blob/main/codelijsten/COD163
  toewijzingIngangsdatum: Date!
  vaststellingsmoment: DateTime!
  toewijzingEinddatum: Date
  percentage: Int!
}

type ZorgInNatura implements ZorgToewijzing {
  zorgInNaturaID: UUID!
  leveringsvorm: String! #COD578: Leveringsvorm - https://github.com/iStandaarden/iWlz-codelijsten-APiWlz/blob/main/codelijsten/COD578
  zzpCode: String! #COD163: Zorgzwaartepakket - https://github.com/iStandaarden/iWlz-codelijsten-APiWlz/blob/main/codelijsten/COD163
  toewijzingIngangsdatum: Date!
  vaststellingsmoment: DateTime!
  toewijzingEinddatum: Date
  percentage: Int!
  opname: String! #COD260: Ja of nee - https://github.com/iStandaarden/iWlz-codelijsten-APiWlz/tree/main/codelijsten/COD260
  redenIntrekking: String #COD172: Reden intrekking - https://github.com/iStandaarden/iWlz-codelijsten-APiWlz/tree/main/codelijsten/COD172
  etmalen: String #COD755 Etmalen - https://github.com/iStandaarden/iWlz-codelijsten-APiWlz/blob/main/codelijsten/COD755/
  instellingBestemming: String!
  soortToewijzing: String! #COD165: Soort toewijzing - https://github.com/iStandaarden/iWlz-codelijsten-APiWlz/blob/main/codelijsten/COD165
  bemiddeldeInstelling: BemiddeldeInstelling!
}

type Pgb implements ZorgToewijzing {
  pgbID: UUID!
  zzpCode: String! #COD163: Zorgzwaartepakket - https://github.com/iStandaarden/iWlz-codelijsten-APiWlz/blob/main/codelijsten/COD163
  toewijzingIngangsdatum: Date!
  vaststellingsmoment: DateTime!
  toewijzingEinddatum: Date
  percentage: Int!
}

interface Zorginstelling {
  instelling: String!
  ingangsdatum: Date!
  einddatum: Date
}

type Dossierhouder implements Zorginstelling {
  dossierhouderID: UUID!
  instelling: String!
  ingangsdatum: Date!
  einddatum: Date
}

type CoordinatorZorgThuis implements Zorginstelling {
  coordinatorZorgThuisID: UUID!
  instelling: String!
  ingangsdatum: Date!
  einddatum: Date
}

type Overdracht {
  overdrachtID: UUID!
  verantwoordelijkZorgkantoor: String! #COD001: Zorgkantoor - https://github.com/iStandaarden/iWlz-codelijsten-APiWlz/blob/main/codelijsten/COD001
  overdrachtDatum: Date!
  verhuisDatum: Date!
  overdrachtspecificatie: [Overdrachtspecificatie]
  client: Client!
}

type overdrachtspecificatie {
  overdrachtspecificatieID: UUID!
  leveringsstatus: String! #COD167: Leveringsstatus - https://github.com/iStandaarden/iWlz-codelijsten-APiWlz/blob/main/codelijsten/COD167
  leveringsstatusClassificatie: String #COD168: LeveringsstatusClassificatie: https://github.com/iStandaarden/iWlz-codelijsten-APiWlz/blob/main/codelijsten/COD168
  oorspronkelijkeToewijzingEinddatum: Date
  zorgInNatura: ZorgInNatura
  pgb: Pgb
}

type Contact {
  contactID: UUID!
  relatieNummer: String!
  volgorde: Int
  soortRelatie: String! #COD472!
  ingangsdatum: Date!
  einddatum: Date
  naam: Naam!
  telefoon: [Telefoon]
  email: [Email]
  adres: [Adres]
  client: Client!
}

type Naam {
  naamID: UUID!
  voornamen: String
  geslachtsnaam: String
  voorvoegselGeslachtsnaam: String
  partnernaam: String
  voorvoegselPartnernaam: String
  naamGebruik: String #COD700
  organisatieNaam: String
}

type Adres {
  adresID: UUID!
  adresSoort: String! #COD757
  straatnaam: String
  huisnummer: Int
  huisletter: String
  huisnummerToevoeging: String
  postcode: String
  plaatsnaam: String
  landCode: String #COD032
  aanduidingWoonadres: String #NUM061
  ingangsdatum: Date!
  einddatum: Date
}

type Telefoon {
  telefoonID: UUID!
  telefoonnummer: String!
  landnummer: String
  ingangsdatum: Date!
  einddatum: Date
}

type Email {
  emailID: UUID!
  emailadres: String!
  ingangsdatum: Date!
  einddatum: Date
}
